...
        headerTitleStyle: { fontWeight: '600', fontSize: 17 },
        presentation: 'modal',
      }}
    >
      <Stack.Screen
        name="add-transaction"
        options={{ title: 'Add Transaction' }}
      />
      <Stack.Screen
        name="edit-transaction"
        options={{ title: 'Edit Transaction' }}
      />
      <Stack.Screen
...
